cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/MissedSemicolonsTestCase/missed_semicolon_simple_1.cc
int x;
const char* pc;

int add(int a, int b);


int add(int a, int b) {
    int sum = a + b;
    return sum;
}

class Cls {
    class Inner {
        public:
        void i_foo();
    };
};

typedef char* phcar;
